[package]
name = "deqp-runner"
description = "Run the Vulkan conformance test suite in parallel"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["bin"]
bin = ["anyhow", "clap", "num_cpus", "slog-async", "slog-envlogger", "slog-term", "tokio/rt"] # Build binaries

[[bin]]
name = "deqp-runner"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "3.0.0-beta.2", optional = true }
csv = "1.1"
futures = "0.3"
num_cpus = { version = "1", optional = true }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2", optional = true }
slog-envlogger = { version = "2", optional = true }
slog-term = { version = "2", optional = true }
thiserror = "1"
time = { version = "0.2", features = ["serde"] }
tokio = { version = "0.3", features = ["fs", "io-util", "macros", "process", "stream", "sync"] }
